[project]
name = "drmaciver-junkdrawer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "nox>=2024.4.15",
    "shed>=2024.3.1",
    "pytest>=8.3.2",
    "hypothesis>=6.112.0",
    "coverage>=7.6.1",
]
