[project]
name = "drmaciver-junkdrawer"
version = "0.2.0"
description = "A collection of miscellaneous tools that DRMacIver finds useful."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "nox>=2024.4.15",
    "shed>=2024.3.1",
    "pytest>=8.3.2",
    "hypothesis>=6.112.0",
    "coverage>=7.6.1",
    "twine>=5.1.1",
    "build>=1.2.1",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
    ]